Adding quote extraction code