@@ -39,9 +39,13 @@
  	    <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
           <configuration>
             <release>13</release>
             <target>13</target>
+            <compilerArgument>
+            	--enable-preview
+            </compilerArgument>
           </configuration>
         </plugin>
 	  </plugins>
